aula14/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aplicacao-web
  labels:
    ambiente: laboratorio
