aula14/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: aplicacao-web
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
